Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-04-23 (SVN):
    * vid.h: Removed the macros VID_LockBuffer(), VID_UnlockBuffer() and
      VID_HandlePause() and made them into functions for drivers that do
      not need them.

2012-04-22 (SVN):
    * updated XCode project file from Kristian after the addition of new
      cl_inlude.c source file.

2012-04-22 (SVN):
    * pr_edict.c (ED_Alloc_Temp): Remove the intermediary LeastTime var
      and directly compare against Least->alloctime.

2012-04-22 (SVN):
    * menu.c (M_NewMissionPackGame): make sure the mouse is active, so
      that a mouse click can be captured by Key_Event() and we get out
      of the intermission and go into a game using the mouse.

2012-04-22 (SVN):
    * bumped uhexen2 version to 1.5.4. bumped versions for hexen2 engine
      to 1.26 and hexenworld to 0.26.

2012-04-22 (SVN):
    * Separated intermissions setup from [gl_]screen.c into new source
      file cl_inlude.c. Added new members to the client_state_t struct
      to hold the intermission properties and flags. Added new function
      CL_SetupIntermission() to setup the intermission properties. Now
      SB_IntermissionOverlay() of [gl_]screen.c only cares about drawing
      the intermissions and their messages according to the flags set.
      Changed CL_ParseServerMessage() and M_NewMissionPackGame() to call
      the new CL_SetupIntermission() helper function. Small clean up in
      SCR_UpdateScreen() regarding cl.intermission cases.

2012-04-22 (SVN):
    * snd_mp3.c, snd_vorbis.c, snd_wave.c: Make _sure_ that the number
      of channels in the music file is supported, i.e. either stereo or
      mono. Minor tidy up of the error return paths.

2012-04-22 (SVN):
    * gl_func.h: Unless DRAW_PROGRESSBARS is defined, don't try linking
      to glDrawBuffer(). glReadBuffer() is no longer needed at all.

2012-04-22 (SVN):
    * Just removed the envmap thing altogether.